--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,14 @@
 #
 # This file contains configuration flags to customize your site
 #
+# testing o
+
 
 # Name of your site (displayed in the header)
 name: faustus
 
 # Short bio or description (displayed in the header)
-description: firstworldproblems
+description: https://www.firstworldproblems.me
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
